<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#ff769dff"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView android:text="@string/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/header"
        android:textColor="#FF000000" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Button android:id="@+id/spotify_streamer_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/spotify_streamer"
            android:background="#F08C35"
            android:layout_margin="5dp"
            android:padding="20dp" />

        <Button android:id="@+id/scores_app_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/scores_app"
            android:background="#F08C35"
            android:layout_margin="5dp"
            android:padding="20dp" />

        <Button android:id="@+id/library_app_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/library_app"
            android:background="#F08C35"
            android:layout_margin="5dp"
            android:padding="20dp" />

        <Button android:id="@+id/build_it_bigger_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/build_it_bigger"
            android:background="#F08C35"
            android:layout_margin="5dp"
            android:padding="20dp" />

        <Button android:id="@+id/xyz_reader_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/xyz_reader"
            android:background="#F08C35"
            android:layout_margin="5dp"
            android:padding="20dp" />

        <Button android:id="@+id/capstone_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/capstone_project"
            android:background="#ffdd2c00"
            android:layout_margin="5dp"
            android:padding="20dp" />

    </LinearLayout>
</LinearLayout>
